# MoE-DeepEP

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: 00_project_overview.md  01_why_deepep.md  cloud_manual.md  design_notes.md
reference/: moe_improved.py  moe_origin.py
src/common/: comm_utils.py  config.py  trace_io.py
src/phase0_moe_literacy/: __init__.py  analyze_load.py  capture_routing.py  inspect_moe.py
src/phase1_single_gpu_moe/: bench.py  common_moe.py  graph_compare.py  grouped_gemm_fused.py  grouped_gemm_triton.py  moe_layer_bmm.py  moe_layer_naive.py  moe_layer_optimized.py  moe_layer_triton.py  moe_layer_triton_fused.py  probe_triton.py  profile_ncu.py  profile_nsys.py  profile_nsys_fused.py  profile_nsys_triton.py  roofline_check.py
src/phase2_expert_parallel/: bench_cloud.py  check_deepep_api.py  deepep_baseline.py  dispatch_combine_naive.py  dispatch_combine_optimized.py  ep_dist_fused.py  ep_dist_naive.py  ep_dist_opt.py  ep_dist_overlap.py  ep_reference.py  expert_compute_fused.py  overlap.py
tests/: test_dispatch_combine.py  test_ep_reference.py  test_fused_moe.py  test_grouped_gemm.py  test_moe_layer.py
