[project]
name = "moe-deepep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "matplotlib>=3.10.9",
    "modelscope>=1.37.1",
    "numpy>=2.4.6",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]

[tool.uv.extra-build-dependencies]
deep-ep = ["torch"]
