[project]
name = "moe-deepep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "matplotlib>=3.10.9",
    "modelscope>=1.37.1",
    "numpy",
    "torch==2.9.1",
    "transformers>=5.9.0",
]